remove userId params from getMe endpoint
